Dodane klase Korisnik i KorisnikDao, kreirana baza.

--- a/res/css/glavna.css
+++ b/res/css/glavna.css
@@ -16,3 +16,7 @@
 #mniSave .accelerator-text{
 -fx-graphic: none;
 }
+#brdPane{
+    -fx-background-image: url("/img/background.jpg");
+    -fx-background-size: 100% 100%;
+}
