--- a/res/css/radnik.css
+++ b/res/css/radnik.css
@@ -1,3 +1,7 @@
 .stil {
 -fx-alignment: center ;
 }
+#grpane{
+    -fx-background-image: url("/img/background.jpg");
+    -fx-background-size: 100% 100%;
+}
