--- a/res/fxml/admin.fxml
+++ b/res/fxml/admin.fxml
@@ -53,8 +53,8 @@
             <Label fx:id="lb3" />
          </children>
       </HBox>
-      <Button mnemonicParsing="false" text="Dodaj novog korisnika" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <Button mnemonicParsing="false" text="Izbriši korisnika" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+      <Button fx:id="add" mnemonicParsing="false" text="Dodaj novog korisnika" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+      <Button fx:id="dlt" mnemonicParsing="false" text="Izbriši korisnika" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
       <Button fx:id="odoh" mnemonicParsing="false" onAction="#cya" styleClass="logut" text="Logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
    </children>
    <padding>
