--- a/res/fxml/admin.fxml
+++ b/res/fxml/admin.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.AdminController">
+<GridPane hgap="10.0" prefWidth="581.0" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.AdminController">
     <stylesheets>
         <URL value="@/css/admin.css" />
     </stylesheets>
@@ -27,11 +27,11 @@
       <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints vgrow="SOMETIMES" />
-      <RowConstraints vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ListView fx:id="lv" GridPane.rowIndex="1" GridPane.rowSpan="6" />
-      <Label text="Posljednje aktivnosti:" />
+      <ListView fx:id="lv" GridPane.rowIndex="1" GridPane.rowSpan="5" />
+      <Label text="Posljednje aktivnosti " GridPane.valignment="CENTER" />
       <HBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
             <Label text="Pretraži po username " />
@@ -47,14 +47,16 @@
       </HBox>
       <TextField fx:id="tf2" editable="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
       <ListView fx:id="lv2" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <HBox GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+      <Label text="Učinak zaposlenika za mjesec " GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label fx:id="lb3" />
+      <Button fx:id="add" mnemonicParsing="false" text="Dodaj novog korisnika" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+      <HBox styleClass="stil" GridPane.rowIndex="6">
          <children>
-            <Label text="Učinak zaposlenika za mjesec " />
-            <Label fx:id="lb3" />
+            <Label text="Unesi username " />
+            <TextField fx:id="tfdlt" />
+            <Button fx:id="dlt" mnemonicParsing="false" onAction="#brisi" text="Izbriši korisnika" />
          </children>
       </HBox>
-      <Button fx:id="add" mnemonicParsing="false" text="Dodaj novog korisnika" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <Button fx:id="dlt" mnemonicParsing="false" text="Izbriši korisnika" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
       <Button fx:id="odoh" mnemonicParsing="false" onAction="#cya" styleClass="logut" text="Logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
    </children>
    <padding>
