--- a/res/fxml/admin.fxml
+++ b/res/fxml/admin.fxml
@@ -17,49 +17,53 @@
         <URL value="@/css/admin.css" />
     </stylesheets>
     <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" />
-      <ColumnConstraints hgrow="SOMETIMES" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <ListView fx:id="lv" GridPane.rowIndex="1" GridPane.rowSpan="5" />
-      <Label text="Posljednje aktivnosti " GridPane.valignment="CENTER" />
-      <HBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <ColumnConstraints hgrow="SOMETIMES" />
+        <ColumnConstraints hgrow="SOMETIMES" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <ListView fx:id="lv" GridPane.rowIndex="1" GridPane.rowSpan="5" />
+        <Label text="Posljednje aktivnosti " GridPane.valignment="CENTER" />
+        <HBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <children>
+                <Label text="Pretraži po username " />
+                <TextField fx:id="tf1" />
+            </children>
+        </HBox>
+        <HBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <children>
+                <Label text="Izaberi dan " />
+                <DatePicker fx:id="datum" />
+                <Button fx:id="tipka" mnemonicParsing="false" onAction="#submit" text="Pretraži" />
+            </children>
+        </HBox>
+        <TextField fx:id="tf2" editable="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+        <ListView fx:id="lv2" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <HBox GridPane.columnIndex="1" GridPane.rowIndex="4">
          <children>
-            <Label text="Pretraži po username " />
-            <TextField fx:id="tf1" />
+              <Label text="Učinak zaposlenika za mjesec " />
+              <Label fx:id="lb3" />
          </children>
       </HBox>
-      <HBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <children>
-            <Label text="Izaberi dan " />
-            <DatePicker fx:id="datum" />
-            <Button fx:id="tipka" mnemonicParsing="false" onAction="#submit" text="Pretraži" />
-         </children>
-      </HBox>
-      <TextField fx:id="tf2" editable="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <ListView fx:id="lv2" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Label text="Učinak zaposlenika za mjesec " GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Label fx:id="lb3" />
-      <Button fx:id="add" mnemonicParsing="false" text="Dodaj novog korisnika" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <HBox styleClass="stil" GridPane.rowIndex="6">
-         <children>
-            <Label text="Unesi username " />
-            <TextField fx:id="tfdlt" />
-            <Button fx:id="dlt" mnemonicParsing="false" onAction="#brisi" text="Izbriši korisnika" />
-         </children>
-      </HBox>
-      <Button fx:id="odoh" mnemonicParsing="false" onAction="#cya" styleClass="logut" text="Logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
-   </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
+        <Button fx:id="add" mnemonicParsing="false" onAction="#dodaj" text="Dodaj novog korisnika" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+        <HBox styleClass="stil" GridPane.rowIndex="6">
+            <children>
+                <Label text="Unesi username " />
+                <TextField fx:id="tfdlt" />
+                <Button fx:id="dlt" mnemonicParsing="false" onAction="#brisi" text="Izbriši korisnika" />
+            </children>
+        </HBox>
+        <Button fx:id="odoh" mnemonicParsing="false" onAction="#cya" styleClass="logut" text="Logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+    </children>
+    <padding>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+    </padding>
 </GridPane>
