--- a/res/fxml/forma.fxml
+++ b/res/fxml/forma.fxml
@@ -25,32 +25,32 @@
       <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Username">
+      <Label text="%username">
          <padding>
             <Insets left="10.0" />
          </padding>
       </Label>
-      <Label text="Ime" GridPane.rowIndex="1">
+      <Label text="%ime" GridPane.rowIndex="1">
          <padding>
             <Insets left="10.0" />
          </padding>
       </Label>
-      <Label text="Prezime" GridPane.rowIndex="2">
+      <Label text="%prezime" GridPane.rowIndex="2">
          <padding>
             <Insets left="10.0" />
          </padding>
       </Label>
-      <Label text="Admin" GridPane.rowIndex="3">
+      <Label text="%admin" GridPane.rowIndex="3">
          <padding>
             <Insets left="10.0" />
          </padding>
       </Label>
-      <Label text="Password" GridPane.rowIndex="4">
+      <Label text="%password1" GridPane.rowIndex="4">
          <padding>
             <Insets left="10.0" />
          </padding>
       </Label>
-      <Label text="Password" GridPane.rowIndex="5">
+      <Label text="%password1" GridPane.rowIndex="5">
          <padding>
             <Insets left="10.0" />
          </padding>
@@ -80,8 +80,8 @@
             <Insets right="10.0" />
          </GridPane.margin>
       </PasswordField>
-      <Button fx:id="sb" mnemonicParsing="false" onAction="#submit" text="Predaj" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <Button fx:id="ex" mnemonicParsing="false" onAction="#izlaz" text="Odustani" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+      <Button fx:id="sb" mnemonicParsing="false" onAction="#submit" text="%predaj" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+      <Button fx:id="ex" mnemonicParsing="false" onAction="#izlaz" text="%odustani" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
       <CheckBox fx:id="cb" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
    </children>
    <padding>
