--- a/res/fxml/glavna.fxml
+++ b/res/fxml/glavna.fxml
@@ -48,7 +48,7 @@
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem fx:id="ab" mnemonicParsing="false" onAction="#about" text="About" />
             </items>
           </Menu>
         </menus>
