--- a/res/fxml/admin.fxml
+++ b/res/fxml/admin.fxml
@@ -62,6 +62,7 @@
             </children>
         </HBox>
         <Button fx:id="odoh" mnemonicParsing="false" onAction="#cya" styleClass="logut" text="%logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+      <Button fx:id="iz" mnemonicParsing="false" onAction="#izvjestaj" text="%report" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
     </children>
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
