Dodane ikonia za prozore, dodani prevodi alertova i promijenjen način gledanja prijavljavinja korisnika na posao.

--- a/res/css/admin.css
+++ b/res/css/admin.css
@@ -5,3 +5,7 @@
 .stil{
 -fx-alignment: center ;
 }
+#brdPane{
+    -fx-background-image: url("/img/background.jpg");
+    -fx-background-size: 100% 100%;
+}
