--- a/res/css/radnik.css
+++ b/res/css/radnik.css
@@ -5,3 +5,7 @@
     -fx-background-image: url("/img/background.jpg");
     -fx-background-size: 100% 100%;
 }
+#logut{
+-fx-background-color: #EF1919;
+-fx-text-fill: white;
+}
