--- a/res/fxml/radnik.fxml
+++ b/res/fxml/radnik.fxml
@@ -46,5 +46,9 @@
       <Button fx:id="izlaz" mnemonicParsing="false" onAction="#kraj" text="%kraj" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
       <Label text="%vrijeme" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
       <Label fx:id="time" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+      <Button fx:id="logut" mnemonicParsing="false" onAction="#cya" text="%logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets bottom="5.0" right="5.0" top="5.0" />
+         </GridPane.margin></Button>
    </children>
 </GridPane>
