Refactoring urađen, velika većina stvari prevedena na engleski jezik.

--- a/res/fxml/admin.fxml
+++ b/res/fxml/admin.fxml
@@ -42,7 +42,7 @@
             <children>
                 <Label text="%id" />
                 <DatePicker fx:id="datum" />
-                <Button fx:id="tipka" mnemonicParsing="false" onAction="#submit" text="%search" />
+                <Button fx:id="btt" mnemonicParsing="false" onAction="#submit" text="%search" />
             </children>
         </HBox>
         <TextField fx:id="tf2" editable="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
@@ -53,16 +53,16 @@
               <Label fx:id="lb3" />
          </children>
       </HBox>
-        <Button fx:id="add" mnemonicParsing="false" onAction="#dodaj" text="%dnk" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+        <Button fx:id="add" mnemonicParsing="false" onAction="#addUser" text="%dnk" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
         <HBox styleClass="stil" GridPane.rowIndex="6">
             <children>
                 <Label text="%uu" />
                 <TextField fx:id="tfdlt" />
-                <Button fx:id="dlt" mnemonicParsing="false" onAction="#brisi" text="%ik" />
+                <Button fx:id="dlt" mnemonicParsing="false" onAction="#delete" text="%ik" />
             </children>
         </HBox>
-        <Button fx:id="odoh" mnemonicParsing="false" onAction="#cya" styleClass="logut" text="%logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
-      <Button fx:id="iz" mnemonicParsing="false" onAction="#izvjestaj" text="%report" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+        <Button fx:id="ex" mnemonicParsing="false" onAction="#logut" styleClass="logut" text="%logut" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+      <Button fx:id="iz" mnemonicParsing="false" onAction="#report" text="%report" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
     </children>
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
